5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1723_2496.log
== TEST (2019-05-11 13:28:12) 
-- CODE:
num= int(input("qual seu numero"))

while(num!=-1):
	result=soma+1
	print(result)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    result=soma+1
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:28:55) 
-- CODE:
num= int(input("qual seu numero"))
soma=num
while(num!=-1):
	result=soma+num
	print(result)
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:39:54) 
-- CODE:
num=0

while(num!=-1):
	num=int(input("digite um numero: "))
	if (num==-1):
		break
	else:
		num+num
	
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:40:15) 
-- CODE:
num=0

while(num!=-1):
	num=int(input("digite um numero: "))
	if (num==-1):
		break
	else:
		print(num+num)
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:44:55) 
-- CODE:
num=int(input("digite um numero"))
res=soma+num
soma=0

while(num!=-1):
	7
	
	
		
	
-- EXECUTION TIME:
0.180172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 2, in <module>
    res=soma+num
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:44:57) 
-- CODE:
num=int(input("digite um numero"))
res=soma+num
soma=0

while(num!=-1):
	7
	
	
		
	
-- EXECUTION TIME:
0.159685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 2, in <module>
    res=soma+num
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:45:00) 
-- CODE:
num=int(input("digite um numero"))
res=soma+num
soma=0

while(num!=-1):
	
	
	
		
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:45:39) 
-- CODE:
num=int(input("digite um numero"))

soma=0

while(num!=-1):
	res=soma+num
print(res)
	
	
		
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:45:52) 
-- CODE:
num=int(input("digite um numero"))

soma=0

while(num!=-1):
	res=soma+num
print(res)
	
	
		
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:46:23) 
-- CODE:
num=int(input("digite um numero"))
soma=num
soma=0

while(num!=-1):
	res=soma+num
print(res)
	
	
		
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:46:30) 
-- CODE:
num=int(input("digite um numero"))
soma=num
soma=0

while(num!=-1):
	res=soma+num
	print(res)
	
	
		
	
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:49:46) 
-- CODE:
num=int(input("digite um numero"))
soma=num
soma=0

while(num!=-1):
	soma=soma+num
	print(soma)
	
	
	
		
	
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:54:00) 
-- CODE:
num=int(input("digite um numero"))
soma=num


while(num!=-1):
	soma=soma+num
print(soma)
	
	
	
		
	
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:55:38) 
-- CODE:

soma=num


while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
print(soma)
	
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma=num
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:55:45) 
-- CODE:



while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
print(soma)
	
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(num!=-1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:55:52) 
-- CODE:


num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
print(soma)
	
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+num
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:56:00) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
print(soma)
	
	
	
		
	
-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:56:11) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
print(soma)
	
	
	
		
	
-- EXECUTION TIME:
0.169518
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
873
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32652
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:57:58) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		print(soma)
	
	
	
		
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:58:15) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		print(soma)
	
	
	
		
	
-- EXECUTION TIME:
0.179331
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:58:36) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		soma+=num
	
	
	
		
	
-- EXECUTION TIME:
0.133017
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:58:36) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		soma+=num
	
	
	
		
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:15:32) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		print(soma)
	
	
	
		
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:16:10) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		print(soma)
print(soma)
	
	
	
		
	
-- OUTPUT:
-525
550
883
874
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:16:33) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
	else:
		print(soma)

	
	
	
		
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:16:44) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	soma=soma+num
	if(num==-1):
		break
print(soma)

	
	
	
		
	
-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:18:27) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	if(num==-1):
		break
	else:
		soma=soma+num
print(soma)
		

	
	
	
		
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:18:35) 
-- CODE:

soma=0
num=0
while(num!=-1):
	num=int(input("qual seu numero "))
	if(num==-1):
		break
	else:
		soma=soma+num
print(soma)
		

	
	
	
		
	
-- EXECUTION TIME:
0.176457
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
